--- a/Frontend/Task/app/package.json
+++ b/Frontend/Task/app/package.json
@@ -8,17 +8,20 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "^7.1.5",
+    "css-loader": "^3.2.0",
     "react": "^16.12.0",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "typings-for-css-modules-loader": "^1.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,5 +38,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-modules-typescript-loader": "^4.0.0",
+    "react-app-rewire-typings-for-css-module": "^2.0.0",
+    "react-app-rewired": "^2.1.5",
+    "typescript-plugin-css-modules": "^2.1.0"
   }
 }
