--- a/Frontend/Task/app/tsconfig.json
+++ b/Frontend/Task/app/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
+    /*  "plugins": [
+      {
+        "name": "typescript-plugin-css-modules",
+        "customMatcher": "\\.m\\.css$",
+        "camelCase": "dashes"
+      }
+    ], */
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -19,7 +22,5 @@
     "noEmit": true,
     "jsx": "react"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src", "config_overrides.ts"]
 }
